--- a/app.json
+++ b/app.json
@@ -17,6 +17,8 @@
     "page/work/praise/index",
     "page/work/take/index",
     "page/work/like/index",
+    "page/work/bounty/index",
+    "page/work/bounty/details/index",
 
     "page/work/index/logs/index",
     "page/work/index/wait/index",
