--- a/app.json
+++ b/app.json
@@ -21,6 +21,7 @@
     "page/work/bounty/index",
     "page/work/bounty/details/index",
     "page/work/publish/index",
+    "page/work/publish/rush/index",
 
     "page/work/index/logs/index",
     "page/work/index/wait/index",
