--- a/app.json
+++ b/app.json
@@ -24,6 +24,8 @@
     "page/work/publish/rush/index",
     "page/work/publish/time/index",
     "page/work/publish/daily/index",
+    "page/work/callto/index",
+    "page/work/callto/reapprove/index",
 
     "page/work/index/logs/index",
     "page/work/index/wait/index",
